--- a/MUSHclient.ini
+++ b/MUSHclient.ini
@@ -46,15 +46,14 @@ MRUFloatXPos=-2
 MRUFloatYPos=0
 [CtrlBars-Bar4]
 BarID=32988
-Visible=0
-XPos=-3
-YPos=-3
+XPos=-2
+YPos=-2
 Docking=1
 MRUDockID=0
-MRUDockLeftPos=-3
-MRUDockTopPos=-3
-MRUDockRightPos=1004
-MRUDockBottomPos=18
+MRUDockLeftPos=-2
+MRUDockTopPos=-2
+MRUDockRightPos=1005
+MRUDockBottomPos=19
 MRUFloatStyle=4
 MRUFloatXPos=-2
 MRUFloatYPos=0
@@ -74,4 +73,8 @@ Bar#1=32988
 Bar#2=0
 [Recent File List]
 File1=C:\Program Files\MUSHclient\worlds\Aardwolf.mcl
-File2=.\worlds\Aardwolf.mcl
+File2=C:\Program Files\MUSHclient\worlds\plugins\WinkleWinkle_Search_Destroy_2.xml
+File3=C:\Program Files\MUSHclient\worlds\plugins\WinkleWinkle_Mapper_Extender_2.xml
+File4=C:\Program Files\MUSHclient\worlds\plugins\WinkleWinkle_Spellup_2.xml
+File5=C:\Program Files\MUSHclient\worlds\plugins\WinkleWinkle_Quest_Status.xml
+File6=.\worlds\Aardwolf.mcl
